Sitio web con GitHub Pages de prueba

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>ESte es un sitio web creado con GitHub Pages</h1>
   <p>Creado por Mario *-*</p>
-  <p><img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fgfycat.com%2Fpasteltemptingiguanodon&psig=AOvVaw3c-8CkFfNoQCiEIzLM1iWf&ust=1577555305990000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCKixlPWx1uYCFQAAAAAdAAAAABAD" alt="JOJOJO Error navideño..."></p>
+  <p><img href="https://thumbs.gfycat.com/PastelTemptingIguanodon-mobile.mp4" alt="JOJOJO Error navideño..."></p>
 </body>
 </html>
