--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>ESte es un sitio web creado con GitHub Pages</h1>
   <p>Creado por Mario *-*</p>
-  <p><img href="https://thumbs.gfycat.com/PastelTemptingIguanodon-mobile.mp4" alt="JOJOJO Error navideño..."></p>
+  <p><img href="https://i.imgur.com/nbgENhq.gif?noredirect" alt="JOJOJO Error navideño..."></p>
 </body>
 </html>
